<resources>
    <string name="ad_unit_id_word_list_activity">ca-app-pub-9981561473221924/8286179660</string>
    <string name="ad_unit_id_word_grid">ca-app-pub-9981561473221924/3177355033</string>
    <string name="ad_unit_id_apeere_ami_activity">ca-app-pub-9981561473221924/1916244254</string>
    <string name="ad_unit_id_apeere_siso_oro_activity">ca-app-pub-9981561473221924/7346602702</string>
    <string name="app_name">Akọ́mọlédè</string>
    <string name="e_kaabo">Ẹ káàbọ̀ sí yára ìkẹ́kọ̀ọ́</string>
    <string name="welcome">Welcome to class...</string>
    <string name="eko_kini">Ẹ̀kọ́ kìn-ín-ní</string>
    <string name="lesson_one">(Lesson one)</string>
    <string name="alfabeti">Álífábẹ́ẹ̀tì Èdè Yorùbá</string>
    <string name="kekere_nla_alphabet">Álífábẹ́ẹ̀tì Ńlá àti kékeré</string>
    <string name="small_big_alphabet">(Capital and Small letter)</string>
    <string name="onka_alphabet">Álífábẹ́ẹ̀tì márùndínlọ́gbọ̀n ló wà nínú èdè Yorùbá</string>
    <string name="number_of_alphabet">(Yorùbá Alphabet has 25 letters)</string>
    <string name="A">Aa</string>
    <string name="sound_a"> (ah)</string>
    <string name="B">Bb</string>
    <string name="sound_b"> (bi)</string>
    <string name="D">Dd</string>
    <string name="sound_d"> (di)</string>
    <string name="E">Ee</string>
    <string name="sound_e"> (hay)</string>
    <string name="Ee">Ẹẹ </string>
    <string name="sound_Ee"> (hen)</string>
    <string name="F">Ff </string>
    <string name="sound_F"> (fi)</string>
    <string name="G">Gg </string>
    <string name="sound_g"> (gi)</string>
    <string name="Gb">Gb </string>
    <string name="sound_gb"> (gb)</string>
    <string name="H">Hh </string>
    <string name="sound_In"> (in)</string>
    <string name="I">Ii </string>
    <string name="sound_He"> (he!)</string>
    <string name="J"> Jj </string>
    <string name="sound_J"> (ji)</string>
    <string name="K">Kk </string>
    <string name="sound_K"> (kí)</string>
    <string name="L">Ll </string>
    <string name="sound_L"> (li)</string>
    <string name="M"> Mm </string>
    <string name="sound_M"> (mi)</string>
    <string name="N"> Nn  </string>
    <string name="sound_N"> (ni)</string>
    <string name="O">Oo </string>
    <string name="sound_O"> (oh)</string>
    <string name="Oo">Ọọ </string>
    <string name="sound_Oo"> (or!)</string>
    <string name="P">Pp </string>
    <string name="sound_P"> (pi)</string>
    <string name="R">Rr </string>
    <string name="sound_R"> (ri)</string>
    <string name="S">SS </string>
    <string name="sound_S"> ( c)</string>
    <string name="Ss">Ṣs </string>
    <string name="sound_Ss"> (shi)</string>
    <string name="T">Tt </string>
    <string name="sound_T"> (ti)</string>
    <string name="U">Uu </string>
    <string name="sound_U"> (uh!)</string>
    <string name="W">Ww </string>
    <string name="sound_W"> (wi)</string>
    <string name="Y"> Yy </string>
    <string name="sound_y"> (yi)</string>
    <string name="faweli">Fawẹ́lì</string>
    <string name="vowel">(Vowels)</string>
    <string name="kosonanti">Kọ́sónàntì</string>
    <string name="consonant">(Consonants)</string>
    <string name="eko_keji">  Ẹ̀kọ́ Kejì </string>
    <string name="lesson_two"> (Lesson two) </string>
    <string name="asopo_kosonanti_faweli">  Àsopọ̀ Kọ́sónàntì àti Fáwẹ́lì </string>
    <string name="join_vowel_consonant"> (combination of Consonant and Vowel) </string>
    <string name="bi_ase_se_asopo"> Kọ́sónàntì ni a óò fi bẹ̀rẹ̀ tí a óò sì so Fáwẹ́lì pọ̀ mọ </string>
    <string name="how_to_join_words"> (to form this, we will Combine the vowels to the consonants) </string>
    <string name="asopo"> Àsopọ̀-Ọ̀rọ̀</string>
    <string name="asopo_ba"> B+A</string>
    <string name="asopo_b_a">Bá</string>
    <string name="asopo_be">B+E</string>
    <string name="asopo_b_e">Bé</string>
    <string name="asopo_bee">B+Ẹ</string>
    <string name="asopo_b_ee">Bẹ́</string>
    <string name="asopo_bi">B+I</string>
    <string name="asopo_b_i">Bí</string>
    <string name="asopo_bo">B+O</string>
    <string name="asopo_b_o">Bo</string>
    <string name="asopo_boo">B+Ọ</string>
    <string name="asopo_b_oo">Bọ</string>
    <string name="asopo_bu"> B+U</string>
    <string name="asopo_b_u"> Bù</string>
    <string name="asopo_da"> D+Á</string>
    <string name="asopo_d_a"> DÁ</string>
    <string name="asopo_de"> D+É</string>
    <string name="asopo_d_e"> DÉ</string>
    <string name="asopo_dee"> D+Ẹ́</string>
    <string name="asopo_d_ee"> DẸ́</string>
    <string name="asopo_di"> D+Í</string>
    <string name="asopo_d_i"> DÍ</string>
    <string name="asopo_do"> D+O</string>
    <string name="asopo_d_o"> DO</string>
    <string name="asopo_doo"> D+Ọ</string>
    <string name="asopo_d_oo"> DỌ</string>
    <string name="asopo_du"> D+Ù</string>
    <string name="asopo_d_u"> DÙ</string>
    <string name="asopo_fa"> F+A</string>
    <string name="asopo_f_a"> FA</string>
    <string name="asopo_fe"> F+E</string>
    <string name="asopo_f_e"> FE</string>
    <string name="asopo_fee"> F+Ẹ́</string>
    <string name="asopo_f_ee"> FẸ́</string>
    <string name="asopo_fi"> F+Í</string>
    <string name="asopo_f_i"> FÍ</string>
    <string name="asopo_fo">  F+O</string>
    <string name="asopo_f_o">  FO</string>
    <string name="asopo_foo"> F+Ọ</string>
    <string name="asopo_f_oo"> FỌ</string>
    <string name="asopo_fu"> F+Ù</string>
    <string name="asopo_f_u"> FÙ</string>
    <string name="asopo_ga"> G+Á</string>
    <string name="asopo_g_a"> GÁ</string>
    <string name="asopo_ge"> G+E</string>
    <string name="asopo_g_e"> GE</string>
    <string name="asopo_gee">  G+Ẹ́</string>
    <string name="asopo_g_ee">  GẸ́</string>
    <string name="asopo_gi"> G+Í</string>
    <string name="asopo_g_i"> GÍ</string>
    <string name="asopo_go"> G+O</string>
    <string name="asopo_g_o"> GO</string>
    <string name="asopo_goo"> G+Ọ</string>
    <string name="asopo_g_oo"> GỌ</string>
    <string name="asopo_gu"> G+Ù</string>
    <string name="asopo_g_u"> GÙ</string>
    <string name="asopo_gb">G+B</string>
    <string name="asopo_g_b">GB</string>
    <string name="asopo_gba">G+B+Á</string>
    <string name="asopo_g_ba">GBÁ</string>
    <string name="asopo_gbe">G+B+É</string>
    <string name="asopo_g_be">GBÉ</string>
    <string name="asopo_gbee">G+B+Ẹ́</string>
    <string name="asopo_gb_ee">GBẸ́</string>
    <string name="asopo_gbi">G+B+Í</string>
    <string name="asopo_gb_i">GBÍ</string>
    <string name="asopo_gbo">G+B+O</string>
    <string name="asopo_gb_o">GBO</string>
    <string name="asopo_gboo">G+B+Ọ</string>
    <string name="asopo_gbo_O">GBỌ</string>
    <string name="asopo_gbu">G+B+Ù</string>
    <string name="asopo_gb_u">GBÙ</string>
    <string name="ise_ifikora">Isẹ́ ìfikọ́ra </string>
    <string name="Exercise">Exercise </string>
    <string name="ise_amurele_2">Ṣé àsopọ̀ fún àwọn kọ́sónàntì àti fáwẹ̀lì yóòkù </string>
    <string name="exercise_2">(Combine other Consonants and Vowels)</string>
    <string name="eko_keta">   Ẹ̀kọ́ Kẹta </string>
    <string name="lesson_three">   (Lesson three) </string>
    <string name="ami_ohum">Àmì Ohùn</string>
    <string name="oriki_ami">Oríkì - Àmì Ohùn</string>
    <string name="definition">Definition</string>
    <string name="alaye_ami_ohum">Àmì  Ohùn ni on fi ìgbóhùn sókè-sódò wa hàn nígbà tí a bá ń pe ọ̀rọ̀</string>
    <string name="definition_of__ami">(Tone sign shows the flows of voice while pronouncing words)</string>
    <string name="iran_ami"> Oríṣii Àmì Ohùn</string>
    <string name="types_of__ami"> Types of Tone Sign </string>
    <string name="ami_oke"> Àmì Ohùn òkè</string>
    <string name="ami_mi">mí (/)</string>
    <string name="ami_do">dò ( \\ )</string>
    <string name="ami_isale">  Àmì Ohùn ìsàlẹ̀</string>
    <string name="ami_aarin">  Àmì Ohùn àárín</string>
    <string name="ami_re">re (-)</string>
    <string name="akiye_lori_ami">Àkíyèsí lórí Àmì Ohùn</string>
    <string name="notice_on_sign">Note on Tone Sign</string>
    <string name="akiyesi_kini">A kìí fi àmì ‘re’ sórí ọ̀rọ̀ </string>
    <string name="notice_one">1</string>
    <string name="akiyesi_keji">Orí fawẹ̀lì ni a má ń fi àmì ohùn sí </string>
    <string name="notice_two">2</string>
    <string name="akiyesi_keta">A kìí fi àmì ohùn sórí kọ́sónàntì àyàfi kọ́sónàntì aṣesílébù ‘M àti N’ </string>
    <string name="notice_three">3</string>
    <string name="notice_four">4</string>
    <string name="notice_five">5</string>
    <string name="notice_six">6</string>
    <string name="notice_seven">7</string>
    <string name="notice_eight">8</string>
    <string name="notice_nine">9</string>
    <string name="notice_ten">10</string>
    <string name="notice_eleven">11</string>
    <string name="notice_twelve">12</string>
    <string name="notice_thirteen">13</string>
    <string name="notice_14">14</string>
    <string name="notice_15">15</string>
    <string name="notice_16">16</string>
    <string name="notice_17">17</string>
    <string name="notice_18">18</string>
    <string name="notice_19">19</string>
    <string name="notice_20">20</string>
    <string name="notice_21">21</string>
    <string name="notice_22">22</string>
    <string name="notice_23">23</string>
    <string name="notice_24">24</string>
    <string name="notice_25">25</string>
    <string name="notice_26">26</string>
    <string name="notice_27">27</string>
    <string name="apeere_lilo_ami">Àpẹẹrẹ Lílo Àmì Ohùn</string>
    <string name="example_ami">Examples of Sign Tone</string>
    <string name="apeere_lilo_ami_1">Adé = re mi</string>
    <string name="apeere_lilo_ami_2">Ọba = re re</string>
    <string name="apeere_lilo_ami_3">Ìjòkó = dò dò mi</string>
    <string name="apeere_lilo_ami_4">Ilẹ̀ = re dò</string>
    <string name="apeere_lilo_ami_5">Bọ́lá = mi mi</string>
    <string name="instruction_isefikora_2">Kọ àwọn ọ̀rọ̀ wọ̀nyìí ní àmì</string>
    <string name="exercise_2_instruction">(write out the signs that represents this tone)</string>
    <string name="isefikora_2_kini"> Mí mí mí</string>
    <string name="isefikora_2_keji"> Dò dò dò</string>
    <string name="isefikora_2_keta"> Re re re</string>
    <string name="isefikora_2_kerin"> Dọ̀ dò mí</string>
    <string name="eko_kerin">   Ẹ̀kọ́ kẹrin </string>
    <string name="lesson_four">   (Lesson four) </string>
    <string name="siso_oro">Síso ọ̀rọ̀ pọ̀</string>
    <string name="word_formation">(Words formation)</string>
    <string name="oriki_siso_oro">Oríkì - Síso ọ̀rọ̀ pọ̀ </string>
    <string name="alaye_siso_oro"> Tí a bá fẹ́ sọ ọ̀rọ̀ pọ̀ lédè Yorùbá, a gbọ́dọ̀ rí dájú pé a tẹ̀lé bátànì “fkf tàbí ìlànà kf” </string>
    <string name="definition_of_word_formation">(Words formations in Yorùbá must follows “fkf or kf”pattern) </string>
    <string name="definition_of_word_formation2">K stands for kọ́sónàntì And F for Fáwẹ̀lì </string>
    <string name="apeere_siso_oro">Àpẹẹrẹ Síso ọ̀rọ̀ pọ̀</string>
    <string name="example_siso_oro">Examples of Words Formations</string>
    <string name="apeere_siso_oro_1">Adé (ó tẹ̀lé bátànì “FKF”)</string>
    <string name="apeere_siso_oro_2">Omi (ó tẹ̀lé bátànì \"FKF\")</string>
    <string name="apeere_siso_oro_3">Bọ́lá (ó tẹ̀lé bátànì “KF”) </string>
    <string name="eko_karun">   Ẹ̀kọ́ karùn-ún </string>
    <string name="lesson_five">   (Lesson 5) </string>
    <string name="eko_kefa">Ẹ̀kọ́ kẹfà</string>
    <string name="lesson_six">(Lesson 6) </string>
    <string name="eko_keje">   Ẹ̀kọ́ keje </string>
    <string name="lesson_seven">   (Lesson 7) </string>
    <string name="eko_kejo">    Ẹ̀kọ́ kejo </string>
    <string name="lesson_eight">   (Lesson 8) </string>
    <string name="eko_kesan">  Ẹ̀kọ́ kẹṣàn-án </string>
    <string name="lesson_nine">   (Lesson 9) </string>
    <string name="eko_kewa"> Ẹ̀kọ́ kẹwàá </string>
    <string name="lesson_ten">   (Lesson 10) </string>
</resources>